Initial footer layout and styling. Position has not been fixed to bottom. Link positions are not responsive.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: arial,sans-serif;
     font-size: 13px;
+    height: 100%;
 }
 
 #nav-bar {
@@ -41,6 +42,8 @@ body {
     align-items: center;
     margin-right: 20px;
 }
+
+main {}
 
 #main-logo {
     position: relative;
@@ -116,4 +119,51 @@ body {
 
 #special-link a:hover {
     text-decoration: underline;
+}
+
+footer {
+    background: #f2f2f2;
+    position: fixed;
+    left: 0;
+    bottom 0;
+    width: 100%;
+    margin-top: 30px;
+    height: 100px;
+    color: #707588;
+}
+
+#carbon {
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#carbon p {
+    display: block;
+    padding-top: 20px;
+}
+
+#footer-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+#footer-links a {
+    text-decoration: none;
+    padding: 0 10px;
+    color: #707588;
+    margin-top: 10px;
+}
+
+#left-footer {
+    display: flex;
+    flex-direction: row;
+}
+
+#right-footer {
+    display: flex;
+    flex-direction: row;
 }
